<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_nav"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/settings_nav"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/about_nav"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />

    <item
        android:id="@+id/help_nav"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help" />

    <item
        android:id="@+id/gotoweb_nav"
        android:icon="@drawable/link_24px"
        android:title="@string/go_to_web" />

    <item
        android:id="@+id/logout_nav"
        android:icon="@drawable/logout_24px"
        android:title="@string/log_out" />
</menu>