<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical"
    tools:showIn="@layout/activity_sign_up">

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:hint="@string/display_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/divider" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/divider" />

    <EditText
        android:id="@+id/pass_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/divider" />

    <EditText
        android:id="@+id/retype_pass_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textSize="20sp"
        android:importantForAutofill="no" />

</LinearLayout>