<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/icons"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:hint="@string/email"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textSize="20sp"
                tools:ignore="Autofill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/divider" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/icons"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/si_gotosignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/icons"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/si_forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/icons"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>