<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/icons"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/v1"
                layout="@layout/sign_up_1"
                android:visibility="visible" />

            <include
                android:id="@+id/v2"
                layout="@layout/sign_up_2"
                android:visibility="gone" />

            <include
                android:id="@+id/v3"
                layout="@layout/sign_up_3"
                android:visibility="gone" />

            <include
                android:id="@+id/v4"
                layout="@layout/sign_up_4"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/fin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:text="@string/next"
            android:textColor="@color/icons"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/su_goto_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/icons" />

    </LinearLayout>

</RelativeLayout>