<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primaryColor"
        android:theme="@style/ToolbarTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/default_male" />

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/display_name"
                android:textColor="@color/icons"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/icons"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/person_25px"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/profile_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/bio"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/icons"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/phone_25px"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/profile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/phone_number"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/icons"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/gender_25px"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/profile_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/gender"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/icons"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/birthday_25px"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/profile_bday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/birthday"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/icons"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/student_center_25px"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/profile_college"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/college"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/icons"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/department_25px"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/profile_dept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/department"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>